syntax = "proto3";

package ocf.cloud.grpcgateway.pb.errdetails;
option go_package = "github.com/plgd-dev/cloud/grpc-gateway/pb/errdetails;errdetails";

// must be generated with without gogo protobuf because it is used in grpc status details.

message Content {
    bytes data  = 1;
    string content_type  = 2;
}

message DeviceError {
    Content content = 2;
}